--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./static//images/favicon.png">
+        <link rel="icon" href="./static/images/favicon.png">
         <title>Vilhelm Martinsson Web Applications | www.vilhelmmartinsson.com | Full-stack Web Development | Web Applications</title>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link rel="stylesheet" href="./static//css/styles.css">
+        <link rel="stylesheet" href="./static/css/styles.css">
     </head>
     <body>
 
         <nav class="nav">
-            <img id="nav-button" alt="Nav" src="./static//images/list.svg" />
+            <img id="nav-button" alt="Nav" src="./static/images/list.svg" />
 
             <ul>
               <li><a href="#home">Home</a></li>
@@ -30,7 +30,7 @@
                 <span class="star"></span>
 
                 <div>
-                    <img class="mb-2" id="logo" alt="Logo" src="./static//images/vmwa-background.svg" />
+                    <img class="mb-2" id="logo" alt="Logo" src="./static/images/vmwa-background.svg" />
                     <h1 class="mb-1">Vilhelm Martinsson</h1>
                     <h3 class="mb-2">WEB APPLICATIONS</h3>
                     <small>www.vilhelmmartinsson.com</small>             
@@ -117,7 +117,7 @@
                     <div class="card" data-aos="fade-left" data-aos-offset="10">
                         <div>
                             <a title="Webbstream" href="https://www.webbstream.se">
-                                <img src="./static//images/webbstream.png">
+                                <img src="./static/images/webbstream.png">
                             </a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                     <div class="card" data-aos="fade-left" data-aos-offset="50">
                         <div>
                             <a title="SRS Regatta" href="https://www.srsregatta.se">
-                                <img src="./static//images/regatta.png">
+                                <img src="./static/images/regatta.png">
                             </a>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                     <div class="card" data-aos="fade-left" data-aos-offset="100">
                         <div>
                             <a title="Grannkampen" href="https://www.grannkampen.se">
-                                <img src="./static//images/grannkampen.svg">
+                                <img src="./static/images/grannkampen.svg">
                             </a>
                         </div>
                     </div>
@@ -141,14 +141,14 @@
                     <div class="card" data-aos="fade-left" data-aos-offset="150">
                         <div>
                             <a title="Hälsoförmedlingen" href="https://www.halsoformedlingen.se">
-                                <img src="./static//images/halsoformedlingen.jpg">
+                                <img src="./static/images/halsoformedlingen.jpg">
                             </a>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-left" data-aos-offset="150">
                         <div>
                             <a title="Franke" href="https://www.franke.se">
-                                <img src="./static//images/FRanke_logo.svg">
+                                <img src="./static/images/franke.svg">
                             </a>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                 <span class="star"></span>
 
                 <div class="quote" data-aos="fade" data-aos-duration="1500">
-                    <h3><img class="quote-marks" width="70" src="./static//images/quotes.svg" alt="Quote marks"><span style="font-size:2.5rem;margin-right: 0.5rem;">Technology,</span> <span style="font-size:2rem">like art</span>,<br>
+                    <h3><img class="quote-marks" width="70" src="./static/images/quotes.svg" alt="Quote marks"><span style="font-size:2.5rem;margin-right: 0.5rem;">Technology,</span> <span style="font-size:2rem">like art</span>,<br>
                     is a soaring exercise of the human imagination.</h3>
                     <span>- Daniel Bell, American sociologist.</span>
                 </div>
@@ -195,6 +195,6 @@
         </script>
 
         <!-- <script src="modal.js"></script> -->
-        <script src="./static//js/navbar.js"></script>
+        <script src="./static/js/navbar.js"></script>
     </body>
 </html>
