--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <body>
 
         <nav class="nav">
-            <!-- <img id="nav-button" alt="Nav" src="./static/images/list.svg" /> -->
             <button class="hamburger">☰</button>
             <button class="close">✕</button>
 
@@ -31,7 +30,7 @@
         <main>
             <section id="hero">
                 <span class="star"></span>
-                <div>
+                <div data-aos="fade" data-aos-duration="1500">
                     <img class="mb-2" id="logo" alt="Logo" src="./static/images/vmwa-background.svg" />
                     <h1 class="mb-1">Vilhelm Martinsson</h1>
                     <h3 class="mb-2">WEB APPLICATIONS</h3>
