--- a/index.html
+++ b/index.html
@@ -153,13 +153,10 @@
                 </div> 
             </section>
 
-            <section class="purple">
-                <span class="star"></span>
-
-                <div class="quote" data-aos="fade" data-aos-duration="1500">
-                    <h3><img class="quote-marks" width="70" src="./static/images/quotes.svg" alt="Quote marks"><span style="font-size:2.5rem;margin-right: 0.5rem;">Technology,</span> <span style="font-size:2rem">like art</span>,<br>
-                    is a soaring exercise of the human imagination.</h3>
-                    <span>- Daniel Bell, American sociologist.</span>
+            <section class="quote">
+                <div class="quote-container" data-aos="fade" data-aos-duration="1500">
+                    <h3><img class="quote-marks" width="60" src="./static/images/quotes.svg" alt="Quote marks">Technology, like art,<br>is a soaring exercise<br>of the human imagination.</h3>
+                    <small>- Daniel Bell, American sociologist.</small>
                 </div>
             </section>
         </main>
