--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
             <section class="quote">
                 <div class="quote-container" data-aos="fade" data-aos-duration="1500">
-                    <h3><img class="quote-marks" width="60" src="./static/images/quotes.svg" alt="Quote marks">Technology, like art,<br>is a soaring exercise<br>of the human imagination.</h3>
+                    <h3><img class="quote-marks" width="60" src="./static/images/quotes.svg" alt="Quote marks">Technology, <span style="color:#bce1ff">like art</span>,<br>is a soaring exercise<br>of the human imagination.</h3>
                     <small>- Daniel Bell, American sociologist.</small>
                 </div>
             </section>
