--- a/index.html
+++ b/index.html
@@ -154,8 +154,10 @@
             </section>
 
             <section class="quote">
-                <div class="quote-container" data-aos="fade" data-aos-duration="1500">
-                    <h3><img class="quote-marks" width="60" src="./static/images/quotes.svg" alt="Quote marks">Technology, <span style="color:#bce1ff">like art</span>,<br>is a soaring exercise<br>of the human imagination.</h3>
+                <div data-aos="fade" data-aos-duration="1500">
+                    <div class="quote-container">
+                        <img class="quote-marks" width="60" src="./static/images/quotes.svg" alt="Quote marks">Technology, <span style="color:#bce1ff">like art</span>,<br>is a soaring exercise<br>of the human imagination.
+                    </div>
                     <small>- Daniel Bell, American sociologist.</small>
                 </div>
             </section>
