--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <section class="quote">
                 <div data-aos="fade" data-aos-duration="1500">
                     <div class="quote-container">
-                        <img class="quote-marks" width="50" src="./static/images/quotes.svg" alt="Quote marks">Technology, <span style="color:#bce1ff">like art</span>,<br>is a soaring exercise<br>of the human imagination.
+                        <img class="quote-marks" width="50" src="./static/images/quotes.svg" alt="Quote marks">Technology, like art,<br>is a soaring exercise<br>of the human imagination.
                     </div>
                     <small>- Daniel Bell, American sociologist.</small>
                 </div>
