--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main>
             <section id="hero">
                 <span class="star"></span>
-                <div data-aos="fade" data-aos-duration="1500">
+                <div class="mb-2" data-aos="fade" data-aos-duration="1500">
                     <img class="mb-2" id="logo" alt="Logo" src="./static/images/vmwa-background.svg" />
                     <h1 class="mb-1">Vilhelm Martinsson</h1>
                     <h3 class="mb-2">WEB APPLICATIONS</h3>
