--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </main>
 
         <footer>
-            <div class="container" id="contact">
+            <div id="contact">
                 <div class="column">
                     <ul class="row social">
                         <li>
