--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
             <section class="quote">
                 <div data-aos="fade" data-aos-duration="1500">
                     <div class="quote-container">
-                        <img class="quote-marks" width="50" src="./static/images/quotes.svg" alt="Quote marks">Technology, like art,<br>is a soaring exercise<br>of the human imagination.
+                        <img class="quote-marks" width="50" src="./static/images/quotes.svg" alt="Quote marks">
+                        Technology, like art,<br>is a soaring exercise<br>of the human imagination.
                     </div>
-                    <small>- Daniel Bell, American sociologist.</small>
+                    <small>- Daniel Bell, American sociologist</small>
                 </div>
             </section>
         </main>
