--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <button class="close">✕</button>
 
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#technologies">Technologies</a></li>
-                <li><a href="#customers">Customers</a></li>
+                <li><a href="#home" class="scroll-to-section">Home</a></li>
+                <li><a href="#about" class="scroll-to-section">About</a></li>
+                <li><a href="#services" class="scroll-to-section">Services</a></li>
+                <li><a href="#technologies" class="scroll-to-section">Technologies</a></li>
+                <li><a href="#customers" class="scroll-to-section">Customers</a></li>
                 <li><a href="https://vilhelm-martinsson.ghost.io/">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact" class="scroll-to-section">Contact</a></li>
             </ul>
         </nav>
 
