--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                 <li><a href="#home" class="scroll-to-section">Home</a></li>
                 <li><a href="#about" class="scroll-to-section">About</a></li>
                 <li><a href="#services" class="scroll-to-section">Services</a></li>
-                <li><a href="#technologies" class="scroll-to-section">Technologies</a></li>
+                <li><a href="#technologies" class="scroll-to-section">Tech</a></li>
                 <li><a href="#customers" class="scroll-to-section">Customers</a></li>
+                <li><a href="#reviews" class="scroll-to-section">Reviews</a></li>
                 <li><a href="https://vilhelm-martinsson.ghost.io/">Blog</a></li>
                 <li><a href="#contact" class="scroll-to-section">Contact</a></li>
             </ul>
@@ -66,7 +67,7 @@
                 </p>
                 <br>
             </section>
-            
+
             <section class="services" id="services">
                 <h2 class="mb-4" data-aos="fade-left">Services</h2>
                 <hr>
@@ -86,12 +87,12 @@
                 <div class="row">
                   <div class="column">
                     <ul>
-                        <li data-aos="fade-left" data-aos-offset="10"><a href="https://www.python.org/"><i class="fab fa-python"></i></a></li>
-                        <li data-aos="fade-left" data-aos-offset="50"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i class="fab fa-js-square"></i></a></li>
-                        <li data-aos="fade-left" data-aos-offset="100"><a href="https://www.vuejs.org/"><i class="fab fa-vuejs"></i></a></li>
-                        <li data-aos="fade-left" data-aos-offset="150"><a href="https://nodejs.org/en/"><i class="fab fa-node-js"></i></a></li>
-                        <li data-aos="fade-left" data-aos-offset="200"><a href="https://www.w3.org/html/"><i class="fab fa-html5"></i></a></li>
-                        <li data-aos="fade-left" data-aos-offset="250"><a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fab fa-css3-alt"></i></a></li>
+                        <li title="Python" data-aos="fade-left" data-aos-offset="10"><a href="https://www.python.org/"><i class="fab fa-python"></i></a></li>
+                        <li title="Javascript" data-aos="fade-left" data-aos-offset="50"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i class="fab fa-js-square"></i></a></li>
+                        <li title="Vue" data-aos="fade-left" data-aos-offset="100"><a href="https://www.vuejs.org/"><i class="fab fa-vuejs"></i></a></li>
+                        <li title="Node" data-aos="fade-left" data-aos-offset="150"><a href="https://nodejs.org/en/"><i class="fab fa-node-js"></i></a></li>
+                        <li title="HTML5" data-aos="fade-left" data-aos-offset="200"><a href="https://www.w3.org/html/"><i class="fab fa-html5"></i></a></li>
+                        <li title="CSS3" data-aos="fade-left" data-aos-offset="250"><a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fab fa-css3-alt"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -99,18 +100,10 @@
                     I work primarily with technologies such as Python, Django, Flask, Django-Rest, Django-Channels, Websockets, Javascript (ES6+, Node, Vue.js, Nuxt.js), Postegresql, HTML5, CSS3, SQL, JSON, Git/Github, Heroku, Digital Ocean (Droplets and App Platform), Stripe, Mailgun, Nginx, Gunicorn, Linux (Ubuntu), OpenAi etc.
                 </p>
             </section>
-    
+
             <section id="customers" class="customers">
                 <h2 class="mb-4" data-aos="fade-left">Customers</h2>
                 <hr>
-                <div class="mb-5">
-                    <p class="mb-3">
-                        <i>
-                            "Vilhelm has helped us with everything from requirements, design, development and implementation of our web application. The collaboration has been very good from start to finish and the project was delivered according to plan!"
-                        </i>
-                    </p>
-                    <small><strong>- Linus Lindeborg, CEO at Hälsoförmedlingen</strong></small>
-                </div>
                 <div class="grid-container">
                     <div class="card" data-aos="fade-left" data-aos-offset="10">
                         <div>
@@ -160,6 +153,29 @@
                         Technology, like art,<br>is a soaring exercise<br>of the human imagination.
                     </div>
                     <small>- Daniel Bell, American sociologist</small>
+                </div>
+            </section>
+
+            <section class="reviews" id="reviews">
+                <h2 class="mb-4" data-aos="fade-left">Reviews</h2>
+                <hr>
+                <div>
+                    <!-- <div class="mb-3 card" data-aos="fade-up">
+                        <p class="mb-3">
+                            <span>
+                                "Vilhelm has been helping us develop a custom content management system using Django, Django REST, Celery, and third-party APIs. The ongoing, iterative approach has been smooth, and we’re very pleased with the result."
+                            </span>
+                        </p>
+                        <small><strong>- Anders Gärme, Webbstream</strong></small>
+                    </div> -->
+                    <div class="card" data-aos="fade-up">
+                        <p class="mb-3">
+                            <span>
+                                "Vilhelm has helped us with everything from requirements, design, development and implementation of our web application. The collaboration has been very good from start to finish and the project was delivered according to plan!"
+                            </span>
+                        </p>
+                        <small><strong>- Linus Lindeborg, CEO at Hälsoförmedlingen</strong></small>
+                    </div>
                 </div>
             </section>
         </main>
