--- a/index.html
+++ b/index.html
@@ -84,17 +84,29 @@
             <section class="technologies" id="technologies">
                 <h2 class="mb-4" data-aos="fade-left">Technologies</h2>
                 <hr>
-                <div class="row">
-                  <div class="column">
-                    <ul>
-                        <li title="Python" data-aos="fade-left" data-aos-offset="10"><a href="https://www.python.org/"><i class="fab fa-python"></i></a></li>
-                        <li title="Javascript" data-aos="fade-left" data-aos-offset="50"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i class="fab fa-js-square"></i></a></li>
-                        <li title="Vue" data-aos="fade-left" data-aos-offset="100"><a href="https://www.vuejs.org/"><i class="fab fa-vuejs"></i></a></li>
-                        <li title="Node" data-aos="fade-left" data-aos-offset="150"><a href="https://nodejs.org/en/"><i class="fab fa-node-js"></i></a></li>
-                        <li title="HTML5" data-aos="fade-left" data-aos-offset="200"><a href="https://www.w3.org/html/"><i class="fab fa-html5"></i></a></li>
-                        <li title="CSS3" data-aos="fade-left" data-aos-offset="250"><a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fab fa-css3-alt"></i></a></li>
-                    </ul>
-                  </div>
+                <div class="technologies-container">
+                    <div class="column">
+                        <div title="Python" data-aos="fade-left" data-aos-offset="10">
+                            <a href="https://www.python.org/"><i class="fab fa-python"></i></a>
+                        </div>
+                        <div title="Javascript" data-aos="fade-left" data-aos-offset="50">
+                            <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i class="fab fa-js-square"></i></a>
+                        </div>
+                        <div title="Vue" data-aos="fade-left" data-aos-offset="100">
+                            <a href="https://www.vuejs.org/"><i class="fab fa-vuejs"></i></a>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div title="Node" data-aos="fade-left" data-aos-offset="150">
+                            <a href="https://nodejs.org/en/"><i class="fab fa-node-js"></i></a>
+                        </div>
+                        <div title="HTML5" data-aos="fade-left" data-aos-offset="200">
+                            <a href="https://www.w3.org/html/"><i class="fab fa-html5"></i></a>
+                        </div>
+                        <div title="CSS3" data-aos="fade-left" data-aos-offset="250">
+                            <a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fab fa-css3-alt"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <p class="mb-5" data-aos="fade-up">
                     I work primarily with technologies such as Python, Django, Flask, Django-Rest, Django-Channels, Websockets, Javascript (ES6+, Node, Vue.js, Nuxt.js), Postegresql, HTML5, CSS3, SQL, JSON, Git/Github, Heroku, Digital Ocean (Droplets and App Platform), Stripe, Mailgun, Nginx, Gunicorn, Linux (Ubuntu), OpenAi etc.
