--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="grid-container">
                     <div class="card" data-aos="fade-left" data-aos-offset="10">
                         <div>
-                            <a title="Webbstream" href="https://www.webbstream.se">
+                            <a title="Webbstream" href="https://webbstream.se">
                                 <img src="./static/images/webbstream.png">
                             </a>
                         </div>
