--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
                 <h2 class="mb-4" data-aos="fade-left">Reviews</h2>
                 <hr>
                 <div>
-                    <!-- <div class="mb-3 card" data-aos="fade-up">
+                    <div class="mb-3 card" data-aos="fade-up">
                         <p class="mb-3">
                             <span>
-                                "Vilhelm has been helping us develop a custom content management system using Django, Django REST, Celery, and third-party APIs. The ongoing, iterative approach has been smooth, and we’re very pleased with the result."
+                                "Vilhelm has been helping us develop a custom content management system using Django, Django REST, Celery, and third-party APIs. It allows us to manage multiple sites, schedule articles, and generate images with ease. The ongoing, iterative approach has been smooth, and we’re very pleased with the result."
                             </span>
                         </p>
                         <small><strong>- Anders Gärme, Webbstream</strong></small>
-                    </div> -->
+                    </div>
                     <div class="card" data-aos="fade-up">
                         <p class="mb-3">
                             <span>
