--- a/index.html
+++ b/index.html
@@ -180,13 +180,21 @@
                         </p>
                         <small><strong>- Anders Gärme, Webbstream</strong></small>
                     </div>
+                    <div class="mb-3 card" data-aos="fade-up">
+                        <p class="mb-3">
+                            <span>
+                                "Vilhelm developed our MVP for a live, local quiz competition, covering both front and back end, and enabling players to compete for cash prizes with Swish payments. The development process has been efficient, and the final product meets our needs perfectly."
+                            </span>
+                        </p>
+                        <small><strong>- Andreas Asplund, Grannkampen</strong></small>
+                    </div>
                     <div class="card" data-aos="fade-up">
                         <p class="mb-3">
                             <span>
                                 "Vilhelm has helped us with everything from requirements, design, development and implementation of our web application. The collaboration has been very good from start to finish and the project was delivered according to plan!"
                             </span>
                         </p>
-                        <small><strong>- Linus Lindeborg, CEO at Hälsoförmedlingen</strong></small>
+                        <small><strong>- Linus Lindeborg, Hälsoförmedlingen</strong></small>
                     </div>
                 </div>
             </section>
